--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -8,3 +8,4 @@
 @import "layouts/home";
 @import "layouts/001-profile-card";
 @import "layouts/002-flipping-card";
+@import "layouts/003-theme-switcher";
