--- a/styles/scss/layouts/_002-flipping-card.scss
+++ b/styles/scss/layouts/_002-flipping-card.scss
@@ -7,15 +7,6 @@
     margin: 5rem;
     position: relative;
     perspective: 1000px;
-
-    &.flipped {
-      .front {
-        transform: rotateY(-180deg);
-      }
-      .back {
-        transform: rotateY(0deg);
-      }
-    }
   }
 
   .front,
@@ -29,7 +20,7 @@
     inset: 0;
     backface-visibility: hidden;
     overflow: hidden;
-    transition: .8s ease;
+    transition: transform .8s ease;
     background-color: #eee;
     transform-style: preserve-3d;
   }
@@ -109,5 +100,42 @@
 
   .back {
     transform: rotateY(180deg);
+    @include flex(space-between, start, column);
+
+    .contact-info {
+      font-size: .75rem;
+    }
+
+    .magnetic-stripe {
+      width: 100%;
+      height: 3rem;
+      background: black;
+    }
+
+    .card-code-gradient {
+      position: relative;
+      background: repeating-linear-gradient(#fff, #fff 3px, #ddd 3px, #ddd 6px);
+      width: 80%;
+      height: 3rem;
+      border-radius: .5rem;
+      left: 5%;
+
+      &::before {
+        content: '005';
+        position: absolute;
+        left: 100%;
+        font-style: italic;
+        padding: .5rem;
+        top: 50%;
+        transform: translateY(-50%);
+        background: white;
+        border-radius: 0 .5rem .5rem 0;
+      }
+    }
+
+    .more-card-info {
+      @extend .contact-info;
+      line-height: 1.2;
+    }
   }
 }
