scroll animations added

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -9,3 +9,4 @@
 @import "layouts/001-profile-card";
 @import "layouts/002-flipping-card";
 @import "layouts/003-theme-switcher";
+@import "layouts/004-scroll-animations";
